create modele and her logic

--- a/StoreV_1/StoreLovePage/template/FuncPage/NotFindPage.html
+++ b/StoreV_1/StoreLovePage/template/FuncPage/NotFindPage.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<h1>Страница не найдена</h1>
-	<a href="/">вернуться на главную страницу</a>
-</body>
-</html>
+{% extends "BaseTamp/BaseBlock.html" %}
+
+{% block title %}Страница не найдена{% endblock title %}
+{% block content %}
+	<p class="h1">Страница не найдена</p>
+	<a class="btn btn-danger" href="/">вернуться на главную страницу<p class="h2"></p></a>
+{% endblock content %}
