--- a/StoreV_1/StoreLovePage/template/FuncPage/ProfilePage.html
+++ b/StoreV_1/StoreLovePage/template/FuncPage/ProfilePage.html
@@ -6,13 +6,16 @@
 	<div>
 		<p class="h2">{{user.username}}</p>
 		<p class="h2">{{user.email}}</p>
+		{% if user.is_superuser %}
+			<p class="h2">admin</p>
+		{% endif %}
 	</div>
 	<div class="d-flex justify-content-center">
 		<div class="m-4">
 			<a href="/user/logout" class="btn btn-warning"><p class="h4">Выйти</p></a>
 		</div>	
 		<div class="m-4">
-			<a href="/" class="btn btn-info"><p class="h4">Товары</p></a>
+			<a href="/shop/list" class="btn btn-info"><p class="h4">Товары</p></a>
 		</div>
 		<div class="m-4">
 			<a href="/" class="btn btn-light"><p class="h4">Корзина</p></a>
