--- a/StoreV_1/StoreLovePage/template/BaseTamp/BaseBlock.html
+++ b/StoreV_1/StoreLovePage/template/BaseTamp/BaseBlock.html
@@ -5,17 +5,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}StoryDefaultPage{% endblock title %}</title>
+	<link rel="stylesheet" href="{% static 'MainStyle.css' %}">
+	{% block New_Link_Items %}
+
+	{% endblock New_Link_Items %}
 	<link rel="icon" type="image/x-icon" href="{% static 'LogoIcon.png' %}" />
 	<link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<div class="container d-flex flex-column align-items-center justify-content-evenly" style="height: 100vh; width: 100%;">
-		<div>
-			{% block content %}
+	{% block content %}
 
-			{% endblock content %}
-		</div>
-	</div>
+	{% endblock content %}
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
