--- a/StoreV_1/static/style.css
+++ b/StoreV_1/static/style.css
@@ -47,7 +47,7 @@
 	max-width: 1607px;
 	height: 100%;
 	display: grid;
-	grid-template-columns:repeat(4,1fr);
+	grid-template-columns:repeat(4,300px);
 	grid-template-rows:repeat(3,450px);
 	gap: 30px;
 	padding: 50px 30px;
@@ -59,9 +59,9 @@
 	border-radius: 15px;
 
 }
-.cards-icon{
-	width: 100%;
-	height: 90%;
+.cards-im{
+	width: 300px;
+	height: 400px;
 }
 .cards-info{
 	display: flex;
@@ -81,4 +81,8 @@
 }
 .cards-info-items:nth-child(2){
 	justify-content: flex-end;
+}
+.form-submit{
+	display: ;
+	overflow: hidden;
 }
