made logic delet user_account, baskets_items, shop_items

--- a/StoreV_1/StoreLovePage/template/FuncPage/BasketPage.html
+++ b/StoreV_1/StoreLovePage/template/FuncPage/BasketPage.html
@@ -20,6 +20,10 @@
 				{{item.price}} {{item.currency}}
 			</div>
 		</div>
+		<form action="" method="post" class="form-submit">
+			{% csrf_token %}
+			<input type="submit" name="{{item.id}}" id="{{item.id}}" value="Удалить">
+		</form>
 	</div>
 </a>
 
