--- a/StoreV_1/StoreLovePage/template/FuncPage/ProfilePage.html
+++ b/StoreV_1/StoreLovePage/template/FuncPage/ProfilePage.html
@@ -20,18 +20,36 @@
 		{% endif %}
 	</div>
 	<div class="d-flex justify-content-center">
-		<div class="m-4">
-			<a href="/user/logout" class="btn btn-warning"><p class="h4">Выйти</p></a>
+		<div class="m-2">
+			<a href="/user/logout" class="btn btn-warning"><p class="h5">Выйти</p></a>
 		</div>	
-		<div class="m-4">
-			<a href="/" class="btn btn-info"><p class="h4">Главная страница</p></a>
+		<div class="m-2">
+			<a href="/" class="btn btn-info"><p class="h5">Главная</p></a>
 		</div>
 		{% if user.is_superuser == False %}
-		<li>
-			<a class="btn btn-light" href="/user/baskets">Корзина</a>
-		</li>
+		<div class="m-2">
+			<a class="btn btn-light" href="/user/baskets"><p class="h5">Корзина</p></a>
+		</div>
 		{% endif %}
+		<div class="m-2">
+			<span id="btn_del" onclick="click_OPEN()" class="btn btn-danger"><p class="h5">Удалить</p></span>
+		</div>
 	</div>
 </div>
-
+<dialog id="dialog">
+	<form action="" method="post">
+		{% csrf_token %}
+		<p>Вы уверены, что хотите удалить?</p>
+		<input type="submit" name="delete" id="delete" value="Да">
+	</form>
+	<button autofocus onclick="click_CLOSE()">Нет</button>
+</dialog>
+<script>
+	function click_OPEN() {
+		document.getElementById("dialog").show()
+	}
+	function click_CLOSE() {
+		document.getElementById("dialog").close()
+	}
+</script>
 {% endblock content %}
